--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,12 @@ body {
 
 .chat {
     height: 250px;
+    border: 10px solid grey;
+}
+
+.chatArea {
+    overflow-y: scroll;
+    height: 220px;
 }
 
 .chat .col-8 {
