--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,10 @@ body {
     background-color: #568EA3;
 }
 
+
+#chat-input {
+    width: 100%;
+}
 #btn-chat {
     height: 190px;
     width: 100%;
